--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "7.1.0",
     "@babel/runtime": "^7.5.5",
+    "@coreui/react": "^3.0.5",
     "@svgr/webpack": "2.4.1",
     "axios": "^0.19.0",
     "babel-core": "7.0.0-bridge.0",
@@ -39,7 +40,7 @@
     "jest-pnp-resolver": "^1.2.1",
     "jest-resolve": "^24.9.0",
     "mini-css-extract-plugin": "0.4.3",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -54,6 +55,7 @@
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.3",
     "react-quill": "^1.3.3",
+    "react-router-dom": "^5.2.0",
     "react-select": "^3.0.4",
     "react-spinners": "^0.6.0",
     "react-switch": "^5.0.1",
